syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// use {app_id}.{version} as package name
package archive.extra.service.v1;

option go_package = "api";

//  grpc
service ArcExtra {
    // 写入/更新 archive_extra业务信息
    rpc AddArchiveExtraValue(AddArchiveExtraValueReq) returns(NoReply);
    // 批量写入/批量更新 archive_extra 单个业务信息
    rpc BatchAddArchiveExtraValue(BatchAddArchiveExtraValueReq) returns(NoReply);
    // 清除 archive_extra业务信息
    rpc RemoveArchiveExtraValue(RemoveArchiveExtraValueReq) returns(NoReply);
    // 批量清除 archive_extra 单个业务信息
    rpc BatchRemoveArchiveExtraValue(BatchRemoveArchiveExtraValueReq) returns(NoReply);
    // 获取 archive_extra 所有业务信息
    rpc GetArchiveExtraValue(GetArchiveExtraValueReq) returns(ArchiveExtraValueReply);
    // 批量获取 archive_extra 所有业务信息
    rpc BatchGetArchiveExtraValue(BatchGetArchiveExtraValueReq) returns(MultiArchiveExtraValueReply);
    // 获取 archive_extra 多个业务信息
    rpc GetArchiveExtraBasedOnKeys(GetArchiveExtraBasedOnKeysReq) returns(ArchiveExtraValueReply);
}

message AddArchiveExtraValueReq {
    int64 aid = 1 [(gogoproto.moretags)='validate:"gt=0,required"'];
    string key = 2 [(gogoproto.moretags)='form: "biz_type" validate:"required"'];
    string value = 3 [(gogoproto.moretags)='form: "biz_value" validate:"required"'];
}

message BatchAddArchiveExtraValueReq {
    string key = 1 [(gogoproto.moretags) = 'validate:"required"'];
    map<int64,string> aid_values = 2 [(gogoproto.moretags) = 'validate:"required"'];
}

message RemoveArchiveExtraValueReq {
    int64 aid = 1 [(gogoproto.moretags)='validate:"gt=0,required"'];
    string key = 2 [(gogoproto.moretags)='validate:"required"'];
}

message BatchRemoveArchiveExtraValueReq {
    string key = 1 [(gogoproto.moretags) = 'validate:"required"'];
    repeated int64 aids = 2 [(gogoproto.moretags)='validate:"max=50,dive,gt=0"'];
}

message GetArchiveExtraValueReq {
    int64 aid = 1 [(gogoproto.moretags)='validate:"gt=0,required"'];
}

message BatchGetArchiveExtraValueReq {
    repeated int64 aids = 1 [(gogoproto.moretags)='validate:"max=50,dive,gt=0"'];
}

message GetArchiveExtraBasedOnKeysReq {
    int64 aid = 1 [(gogoproto.moretags) = 'validate:"required"'];
    repeated string keys = 2 [(gogoproto.moretags)='validate:"max=50,required"'];
}

message ArchiveExtraValueReply {
    map<string,string> extra_info = 1;
}

message MultiArchiveExtraValueReply {
    // aid为key的稿件额外信息
    map<int64,ArchiveExtraValueReply> extra_infos = 2;
}

message NoReply {}